@@ -34,18 +34,7 @@ string fostlib::coercer< string, timestamp >::coerce( timestamp t ) {
         fostlib::coerce< boost::posix_time::ptime >(t)) + "Z";
     return fostlib::coerce< string >(fostlib::coerce< ascii_string >(s));
 }
-rfc1123_timestamp fostlib::coercer<
-    rfc1123_timestamp, timestamp
->::coerce( timestamp t ) {
-    boost::posix_time::ptime ts = fostlib::coerce< boost::posix_time::ptime >(t);
-    std::stringstream ss;
-    ss.imbue(std::locale(
-        ss.getloc(),
-        new boost::posix_time::time_facet("%a, %d %b %Y %H:%M:%S +0000")
-    ));
-    ss << ts;
-    return rfc1123_timestamp(ascii_string(ss.str()));
-}
+
 
 timestamp fostlib::coercer< timestamp, json >::coerce( const json &j ) {
     nullable< string > s( j.get< string >() );
