@@ -1,6 +1,7 @@
 2012-08-17  Kirit Saelensminde  <kirit@felspar.com>
  Removed a dead constructor that does nothing in `worker`.
  No longer pass on log messages captured during tests. This stops expected errors from being displayed and confusing the test results.
+ Added a basic parser for the RFC1123 formatted dates used in protocols like SMTP and HTTP. Only the format produced by the Fost libraries is currently supported.
 
 2012-08-08  Kirit Saelensminde  <kirit@felspar.com>
  The parser lock is now recursive. This means that we can be more aggressive about using it without causing deadlocks. Also removed the parser wrapper that doesn't take a lock so all uses are explicitly forced to acquire the lock at the right time.
